test/corpus/algebraic_data_type.txt
============================================================
Algebraic Data Type Declaration, one Value without parameter
============================================================

data Foo = Bar

---

(source_file
  (algebraicDataTypeDeclaration
    name: (identifier)
	value: (algebraicDataTypeValue
	  name: (identifier)
	)
  )
)

============================================================
Algebraic Data Type Declaration, one Value with one parameter
============================================================

data Foo = Bar(Foo)

---

(source_file
  (algebraicDataTypeDeclaration
    name: (identifier)
	value: (algebraicDataTypeValue
	  name: (identifier)
      parameter: (typeAlgebraicDataType
        name: (identifier)
      )
	)
  )
)


============================================================
Algebraic Data Type Declaration, one Value with two parameter
============================================================

data Foo = Bar(Foo, Baz)

---

(source_file
  (algebraicDataTypeDeclaration
    name: (identifier)
	value: (algebraicDataTypeValue
	  name: (identifier)
      parameter: (typeAlgebraicDataType
        name: (identifier)
      )
      parameter: (typeAlgebraicDataType
        name: (identifier)
      )	)
  )
)



============================================================
Algebraic Data Type Declaration, two Values without parameter
============================================================

data Foo = Bar, Baz

---

(source_file
  (algebraicDataTypeDeclaration
    name: (identifier)
	value: (algebraicDataTypeValue
	  name: (identifier)
	)
	value: (algebraicDataTypeValue
	  name: (identifier)
	)  )
)
