test/corpus/expression.txt
===========================================
Expression Assignment for AlgebraicDataType
===========================================

foo = Bar

---

(source_file
  (assignment
    leftHandSide: (leftHandSideVariable 
      name: (identifier)
    )
	value: (expressionAlgebraicDataType
	  name: (identifier)
	)
  )
)

================================
Expression Assignment for Record
================================

foo = { foo = Bar }

---

(source_file
  (assignment
    leftHandSide: (leftHandSideVariable 
      name: (identifier)
    )
	value: (expressionRecord
	  name: (identifier)
      value: (expressionAlgebraicDataType
        name: (identifier)
      )
	)
  )
)

==============================
Expression Assignment for List
==============================

foo = [ Bar ]

---

(source_file
  (assignment
    leftHandSide: (leftHandSideVariable 
      name: (identifier)
    )
	value: (expressionList
      value: (expressionAlgebraicDataType
        name: (identifier)
      )
	)
  )
)


==================================
Expression Assignment for Function
=================================

foo = \Bar -> Baz

---

(source_file
  (assignment
    leftHandSide: (leftHandSideVariable 
      name: (identifier)
    )
	value: (expressionFunction
      parameter: (parameterLeftHandSideAlgebraicDataType
        name: (identifier)
      )
      body: (expressionAlgebraicDataType
        name: (identifier)
      )
	)
  )
)
