test/corpus/type_alias.txt
============================================
Type Alias declaration for AlgebraicDataType
============================================

type Foo = Bar

---

(source_file
  (typeAliasDeclaration
    name: (identifier)
	value: (typeAlgebraicDataType
	  name: (identifier)
	)
  )
)

=================================
Type Alias declaration for Record
=================================

type Foo = { foo= Bar }

---

(source_file
  (typeAliasDeclaration
    name: (identifier)
	value: (typeRecord
	  name: (identifier)
      value: (typeAlgebraicDataType
        name: (identifier)
      )
	)
  )
)

===============================
Type Alias declaration for List
===============================

type Foo = [ Bar ]

---

(source_file
  (typeAliasDeclaration
    name: (identifier)
	value: (typeList
      value: (typeAlgebraicDataType
        name: (identifier)
      )
	)
  )
)


===================================
Type Alias declaration for Function
===================================

type Foo = \ Bar -> Bar

---

(source_file
  (typeAliasDeclaration
    name: (identifier)
	value: (typeFunction
      parameter: (typeAlgebraicDataType
        name: (identifier)
      )
      return: (typeAlgebraicDataType
        name: (identifier)
      )
	)
  )
)

